--- a/demo-dev.html
+++ b/demo-dev.html
@@ -31,6 +31,8 @@
 					}
 				},
 				"dependencies": {
+					"FilePicker": {"apiKey": "AFLWUBllDRwWZl7sQO1V1z"},
+					"embedly": {"apiKey": "5945901611864679a8761b0fcaa56f87"},
 					"Janrain": {"appId": "echo-appserver"},
 					"StreamServer": {"appkey": "echo.echo.streamserver.echo.prod"}
 				}
