Use dev version of loader on the demo page

--- a/demo.html
+++ b/demo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Echo LiveBlogging v{%=packageVersions.stable%} Demo</title>
-	<script type="text/javascript" src="//cdn.echoenabled.com/sdk/v3/loader.js"></script>
+	<script type="text/javascript" src="//cdn.echoenabled.com/sdk/v3/dev/loader.js"></script>
 </head>
 
 <body>
