--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Echo LiveBlogging v{%=packageVersions.stable%} Demo</title>
+	<title>Echo LiveBlog v{%=packageVersions.stable%} Demo</title>
 	<script type="text/javascript" src="//cdn.echoenabled.com/sdk/v3/dev/loader.js"></script>
 </head>
 
